# TensorRT-LaneATT

./: LICENSE  README.md  laneatt_to_onnx.py  onnx_to_tensorrt.py
ganet/: CMakeLists.txt  README.md  deform_conv.py  ganet.cc  ganet.hh  ganet_pth2onnx.py  main.cc
laneatt/: CMakeLists.txt  laneatt.cc  laneatt.hh  laneatt_test.cc
